--- a/app/src/main/res/layout/activity_reading_questions.xml
+++ b/app/src/main/res/layout/activity_reading_questions.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fbutton="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,9 +30,7 @@
             android:gravity="center_horizontal" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -42,88 +41,92 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        fbutton:layout_constraintGuide_percent="0.5" />
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btnA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:onClick="buttonA"
-        android:backgroundTint="@color/blue"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:text="button"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/grey"
+        android:textSize="18sp"
+        fbutton:buttonColor="@color/white"
+        fbutton:layout_constraintBottom_toTopOf="@+id/btnB"
+        fbutton:layout_constraintEnd_toEndOf="parent"
+        fbutton:layout_constraintStart_toStartOf="parent"/>
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btnB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:onClick="buttonB"
         android:text="Button"
-        android:backgroundTint="@color/blue"
-        app:layout_constraintEnd_toEndOf="@+id/btnA"
-        app:layout_constraintStart_toStartOf="@+id/btnA"
-        app:layout_constraintTop_toBottomOf="@+id/btnA" />
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/grey"
+        android:textSize="18sp"
+        fbutton:buttonColor="@color/white"
+        fbutton:layout_constraintBottom_toTopOf="@+id/btnC"
+        fbutton:layout_constraintEnd_toEndOf="parent"
+        fbutton:layout_constraintStart_toStartOf="parent" />
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btnC"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:onClick="buttonC"
         android:text="Button"
-        android:backgroundTint="@color/blue"
-        app:layout_constraintEnd_toEndOf="@+id/btnB"
-        app:layout_constraintStart_toStartOf="@+id/btnB"
-        app:layout_constraintTop_toBottomOf="@+id/btnB" />
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/grey"
+        android:textSize="18sp"
+        fbutton:buttonColor="@color/white"
+        fbutton:layout_constraintBottom_toTopOf="@+id/btnD"
+        fbutton:layout_constraintEnd_toEndOf="parent"
+        fbutton:layout_constraintStart_toStartOf="parent"/>
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btnD"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:onClick="buttonD"
         android:text="Button"
-        android:backgroundTint="@color/blue"
-        app:layout_constraintEnd_toEndOf="@+id/btnC"
-        app:layout_constraintStart_toStartOf="@+id/btnC"
-        app:layout_constraintTop_toBottomOf="@+id/btnC" />
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/grey"
+        android:textSize="18sp"
+        fbutton:buttonColor="@color/white"
+        fbutton:layout_constraintBottom_toBottomOf="parent"
+        fbutton:layout_constraintEnd_toEndOf="parent"
+        fbutton:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="0dp"
         android:text="Question"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        android:textSize="23sp"
+        android:scrollbars="vertical"
+        android:background="#D3D3D3"
+        fbutton:layout_constraintEnd_toEndOf="parent"
+        fbutton:layout_constraintStart_toStartOf="parent"
+        fbutton:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        fbutton:layout_constraintBottom_toTopOf="@id/btnA"/>
 
-    <ScrollView
+    <TextView
         android:id="@+id/scrollView2"
-        android:layout_width="409dp"
-        android:layout_height="381dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/txtPassage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </RelativeLayout>
-    </ScrollView>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scrollbars="vertical"
+        android:textSize="25sp"
+        android:background="#F5F5DC"
+        fbutton:layout_constraintBottom_toTopOf="@+id/guideline"
+        fbutton:layout_constraintEnd_toEndOf="parent"
+        fbutton:layout_constraintStart_toStartOf="parent"
+        fbutton:layout_constraintTop_toTopOf="parent"
+        fbutton:layout_constraintVertical_bias="0.5">
+    </TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
