--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".AccountFragment">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="112dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:text="Sign Into \nAccount With Email"
+        android:textSize="27dp"
+        android:layout_marginBottom="15dp"/>
+
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+        android:id="@+id/signInData">
 
         <Button
             android:text="Sign In"
@@ -21,28 +32,30 @@
             android:onClick="initiateSignIn"
             tools:ignore="OnClick" />
 
+        <Button
+            android:id="@+id/sign_out_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="signOut"
+            android:text="Sign out" />
+
 
         <TextView
                 android:id="@+id/userName"
                 android:layout_width="173dp"
                 android:layout_height="72dp"
-                android:text="Account View"
-                android:gravity="center"/>
+                android:text=""
+                android:gravity="center" />
 
         <TextView
             android:id="@+id/userEmail"
             android:layout_width="173dp"
             android:layout_height="72dp"
-            android:text="Account View"
+            android:text=""
             android:gravity="center"/>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/sign_out_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="signOut"
-        android:text="Sign out" />
 
-</FrameLayout>
+
+</RelativeLayout>
