--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -27,4 +27,17 @@
         android:progressTint="@color/blue"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="336dp"
+        android:layout_height="306dp"
+        android:layout_above="@+id/text_view"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="50dp"
+        app:srcCompat="@mipmap/ic_solve_logo_round" />
 </RelativeLayout>
