--- a/app/src/main/res/layout/topic_select_activity.xml
+++ b/app/src/main/res/layout/topic_select_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:name="com.innovator.solve.QuestionMainActivity"
-        android:id="@+id/bottom_bar_fragment_activity" />
+        android:id="@+id/bottom_bar_fragment_activity"
+        tools:ignore="Instantiatable" />
 
 
 </LinearLayout>
