--- a/app/src/main/res/layout/question_activity_main.xml
+++ b/app/src/main/res/layout/question_activity_main.xml
@@ -169,6 +169,7 @@
             fbutton:layout_constraintBottom_toTopOf="@id/optCPic"
             android:layout_margin="10dp"
             android:background="#ddd"
+            android:onClick="buttonA"
             />
         <ImageView
             android:layout_width="0dp"
@@ -180,6 +181,7 @@
             fbutton:layout_constraintBottom_toTopOf="@id/optDPic"
             android:layout_margin="10dp"
             android:background="#ddd"
+            android:onClick="buttonB"
             />
         <ImageView
             android:layout_width="0dp"
@@ -191,6 +193,7 @@
             fbutton:layout_constraintRight_toLeftOf="@id/optDPic"
             android:layout_margin="10dp"
             android:background="#ddd"
+            android:onClick="buttonC"
             />
         <ImageView
             android:layout_width="0dp"
@@ -202,6 +205,7 @@
             fbutton:layout_constraintTop_toBottomOf="@id/optBPic"
             android:layout_margin="10dp"
             android:background="#ddd"
+            android:onClick="buttonD"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
