--- a/app/src/main/res/layout/drag_and_drop_question.xml
+++ b/app/src/main/res/layout/drag_and_drop_question.xml
@@ -36,7 +36,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="365dp"
+        android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:background="@color/white"
         android:orientation="vertical">
@@ -45,7 +45,7 @@
         <TextView
             android:id="@+id/question_text"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="101dp"
@@ -62,8 +62,9 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:layout_width="413dp"
-        android:layout_height="373dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@color/white"
         android:orientation="vertical">
 
@@ -120,7 +121,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <TextView
             android:id="@+id/textView4"
@@ -134,32 +136,37 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/white"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            >
 
             <LinearLayout
                 android:id="@+id/box4"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                >
 
                 <Button
                     android:id="@+id/btnDrag"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:text="Option A" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/box5"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <Button
                     android:id="@+id/btnDrag1"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:text="Option B" />
             </LinearLayout>
 
@@ -174,28 +181,30 @@
 
             <LinearLayout
                 android:id="@+id/box6"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <Button
                     android:id="@+id/btnDrag2"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="Option C" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/box7"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+
                 android:orientation="vertical">
 
                 <Button
                     android:id="@+id/btnDrag3"
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="Option D" />
