--- a/app/src/main/res/layout/mock_select_fragment.xml
+++ b/app/src/main/res/layout/mock_select_fragment.xml
@@ -82,7 +82,7 @@
                 android:id="@+id/current_practice_TextView"
                 android:layout_width="250dp"
                 android:layout_height="200dp"
-                android:text="Current"
+                android:text="Loading..."
                 android:textColor="#000000"
                 android:textSize="30dp"
                 android:gravity="center"
